main의 html,css 1차 수정본입니다

--- a/MiniPR/main/templates/main.html
+++ b/MiniPR/main/templates/main.html
@@ -4,9 +4,109 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
+    <title>자동차 리뷰 모아보기</title>
+    <style>
+        .main1 {
+            width: 1000px;
+            margin: auto;
+        }
+
+        .main1_left {
+            width: 30%;
+            float: left;
+            box-sizing: border-box;
+        }
+
+        .main1_right {
+            width: 70%;
+            float: right;
+            box-sizing: border-box;
+        }
+
+        .main2 {
+            width: 1080px;
+            margin: auto;
+            display: grid;
+            gap: 10px; /* 자식요소간의 간격 */
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .main3 {
+            width: 1080px;
+            margin: auto;
+            background-color: greenyellow;
+            gap: 10px; /* 자식요소간의 간격 */
+        }
+
+        .carimage {
+            background-color: red;
+            margin: auto;
+        }
+    </style>
+
 </head>
 <body>
-    main page test
+<div class="main1">
+    <div class="main1_left">
+        <img src="https://www.chevrolet.co.kr/httpobject/images/common/chevrolet.jpg" width=300px>
+    </div>
+    <div class="main1_right">
+        <img src="https://www.chevrolet.co.kr/httpobject/images/campaign/2022-newstart-raq/index/index_h1.jpg"
+             width=800px>
+    </div>
+</div>
+<div class="main2">
+    <div>
+        <button type="button" class="btn btn-light">전체</button>
+        <button type="button" class="btn btn-light">#세단</button>
+        <button type="button" class="btn btn-light">#해치백</button>
+        <button type="button" class="btn btn-light">#SUV</button>
+        <button type="button" class="btn btn-light">#쿠페</button>
+        <button type="button" class="btn btn-light">#트럭</button>
+    </div>
+</div>
+<div class="main3">
+    <div align="left">
+        <button type="button" class="btn btn-light">Car Name</button>
+    </div>
+    <div align="center" class="carimage">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://mma.prnewswire.com/media/1438929/first_Logo.jpg?p=facebook" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://post-phinf.pstatic.net/MjAyMTA4MDZfMTEw/MDAxNjI4MjEzOTM1Njc3.8TlJHzE0T71Ss3-cONcCwFbs5qRA_662vMV6f0stU0Eg.DcuwoW-xiz_7bEZm7rR6qdxvKDILcTKUKnL5SDa2m2Mg.PNG/logo.png?type=w1200" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://occ-0-2794-2219.1.nflxso.net/dnm/api/v6/LmEnxtiAuzezXBjYXPuDgfZ4zZQ/AAAABSjoHd-vruZIdB81EVnM919GpbaSz8Nrgn1AxKBZuUiVt8zblsdHu7FUSBzlHAuNESanvgssRILHckp0ZPLRX9amDfOwZtMQfwH8.png?r=696" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+    <div align="right">
+        <button type="button" class="btn btn-light">자세히보기</button>
+    </div>
+</div>
 </body>
 </html>
