--- a/MiniPR/main/templates/community.html
+++ b/MiniPR/main/templates/community.html
@@ -28,30 +28,11 @@
 
 </head>
 <body>
-    <div class = "wrap">
-        <div class = "left_column">
-            <div class = "img_banner">
-                img banner
-            </div>
-    
-            <div class = "desc">
-                desc
-            </div>
-
-        </div>
-
-
-        <div class = "right_column">
-       
-            <div class = "comment_input">
-                comment in
-            </div>
-
-            <div class = "comment_view">
-                comment view
-            </div>         
-        </div>
-
+    <div class="container">
+        <div class="img_box">img</div>
+        <div class="desc">desc</div>
+        <div class="comment_input">commentinput</div>
+        <div class="comment_container">comment_container</div>
     </div>
 </body>
 </html>
