--- a/MiniPR/main/static/community.css
+++ b/MiniPR/main/static/community.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-}
-
 html {
     margin: 0;
     padding: 0;
@@ -10,59 +6,73 @@ html {
 header {
     top: 0;
 }
-
 body {
+    width: 100vw;
     margin: 0;
-    padding: 0;
-    height: 100%;
+    padding: 0;   
+}
+/* column drop layout 구성 */
+.container {
+    display: -webkit-flex;
     display: flex;
-}
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+  }
+  
+  @media (min-width: 600px) {
+    .img_box .desc .comment_input .comment_container {
+        width: 100%;
+    }
+    .img_box {
+        width: 60%;
+        -webkit-order : 2;
+        order : 2;
+    }
+    .desc{
+        width:40%;
+        -webkit-order : 1;
+        order : 1;
+        
+    }
+    .comment_input{
+        width: 100%;
+        -webkit-order : 3;
+        order : 3;
+    }
+    .comment_view {
+        width: 100%;
+        -webkit-order : 4;
+        order : 4;
+    }
+  }
+  
+  @media (min-width: 800px) {
+    .comment_input, .comment_container {
+      width: 33%;
+    }
+  }
+  
+  /* @media (min-width: 800px) {
+    .container {
+      width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+    } */
+  }
 
-.wrap {
-    margin: 0;
-    padding: 0;
-    flex-direction: row;
-    display: flex;
-}
+    .img_box {
+        background-color: blue;
+        width:100%;
+    }
 
-.left_column {
-    margin: 1% 1% 1% 1%;
-    flex-wrap: wrap;
-}
+    .desc {
+        background-color: green;
+    }
 
-.right_column {
-    margin: 1% 1% 0 1%;
-    flex-wrap: wrap;
-}
+    .comment_input {
+        background-color: black;
+    }
 
-.img_banner {
-    position: relative;
-    display: flex;
-    width: 750px;
-    height: 450px;
-    border:solid 1px black;
-}
-
-.desc {
-    margin: 1% 0 1% 0;
-    position: relative;
-    display: flex;
-    border:solid 1px black;
-    width: 750px;
-    height: 310px;
-}
-
-.comment_input {
-    position: relative;
-    display: flex;
-    border:solid 1px black;
-    width: 625px;
-    height: 150px;
-}
-
-.comment_view {
-    margin : 1% 0 1% 0;
-    display: flex;
-    border:solid 1px black;
-    height: 600px;
-}
+    .comment_container {
+        background-color: red;
+    }
