--- a/MiniPR/main/templates/community.html
+++ b/MiniPR/main/templates/community.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,12 +28,18 @@
 
 
 </head>
+
 <body>
-    <div class="container">
-        <div class="img_box">img</div>
-        <div class="desc">desc</div>
-        <div class="comment_input">commentinput</div>
-        <div class="comment_container">comment_container</div>
+    <div class="row_container"></div>
+        <div class="column1_container">
+            <div class="img_box">img</div>
+            <div class="desc">desc</div>
+        </div>
+        <div class="column2_container">
+            <div class="comment_input">commentinput</div>
+            <div class="comment_container">comment_container</div>
+        </div>
     </div>
 </body>
+
 </html>
