--- a/MiniPR/main/templates/main.html
+++ b/MiniPR/main/templates/main.html
@@ -44,7 +44,6 @@
         .main3 {
             width: 1080px;
             margin: auto;
-            background-color: greenyellow;
             gap: 10px; /* 자식요소간의 간격 */
         }
 
@@ -52,6 +51,7 @@
             background-color: red;
             margin: auto;
         }
+
     </style>
 
 </head>
@@ -62,9 +62,11 @@
     </div>
     <div class="main1_right">
         <img src="https://www.chevrolet.co.kr/httpobject/images/campaign/2022-newstart-raq/index/index_h1.jpg"
-             width=800px>
+             width=740px>
     </div>
 </div>
+
+
 <div class="main2">
     <div>
         <button type="button" class="btn btn-light">전체</button>
@@ -83,13 +85,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://mma.prnewswire.com/media/1438929/first_Logo.jpg?p=facebook" class="d-block w-100" alt="...">
+                    <img src="https://www.chevrolet.co.kr/httpobject/images/new_carinfo/masthead/spark12_1_1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://post-phinf.pstatic.net/MjAyMTA4MDZfMTEw/MDAxNjI4MjEzOTM1Njc3.8TlJHzE0T71Ss3-cONcCwFbs5qRA_662vMV6f0stU0Eg.DcuwoW-xiz_7bEZm7rR6qdxvKDILcTKUKnL5SDa2m2Mg.PNG/logo.png?type=w1200" class="d-block w-100" alt="...">
+                    <img src="https://www.chevrolet.co.kr/httpobject/images/new_carinfo/masthead/colorado4_1_1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://occ-0-2794-2219.1.nflxso.net/dnm/api/v6/LmEnxtiAuzezXBjYXPuDgfZ4zZQ/AAAABSjoHd-vruZIdB81EVnM919GpbaSz8Nrgn1AxKBZuUiVt8zblsdHu7FUSBzlHAuNESanvgssRILHckp0ZPLRX9amDfOwZtMQfwH8.png?r=696" class="d-block w-100" alt="...">
+                    <img src="https://www.chevrolet.co.kr/httpobject/images/new_carinfo/masthead/camaro1_1_1.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
