--- a/MiniPR/main/templates/community.html
+++ b/MiniPR/main/templates/community.html
@@ -31,13 +31,13 @@
 
 <body>
     <div class="nav" id="nav">
-        <h6 class="nav__logo"><a href="/" class="nav__logo_a" onclick="showMovies">NOTFLIX</a> </h6>
+        <div class="nav__logo"><a href="/" class="nav__logo_a"></a></div>
          <ul class="primary-navigation-login">
              <li class="navigation-login"><a href="/login" class="navigation-login_a">로그인</a></li>
              <li class="navigation-join"><a href="/sign_up" class="navigation-join_a">회원가입</a></li>
-             <li class="navigation-my_page"><a href="/my_page" class="navigation-my_page_a">마이페이지</a></li>
          </ul>
     </div>
+
     <div class="wrap_flex_container">
 
         <div class="column1_container">
@@ -56,11 +56,7 @@
         <div class="column2_container">
             <div class="comment_input" id ="comment_input">
                 <article class="media">
-                    <figure class="media-left">
-                        <p class="image is-64x64">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
-                        </p>
-                    </figure>
+                    
                     <div class="media-content">
                         <div class="field">
                             <p class="control">
@@ -73,13 +69,7 @@
                                     <a class="button is-info">Submit</a>
                                 </div>
                             </div>
-                            <div class="level-right">
-                                <div class="level-item">
-                                    <label class="checkbox">
-                                        <input type="checkbox"> Press enter to submit
-                                    </label>
-                                </div>
-                            </div>
+                            
                         </nav>
                     </div>
                 </article>
@@ -87,11 +77,7 @@
             <div class="comment_container" id = "comment_container" >
                 
                 <article class="media">
-                    <figure class="media-left">
-                        <p class="image is-64x64">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
-                        </p>
-                    </figure>
+                    
                     <div class="media-content">
                         <div class="content">
                             <p>
@@ -121,11 +107,7 @@
                     </div>
                 </article>
                 <article class="media">
-                    <figure class="media-left">
-                        <p class="image is-64x64">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
-                        </p>
-                    </figure>
+                    
                     <div class="media-content">
                         <div class="content">
                             <p>
@@ -155,11 +137,7 @@
                     </div>
                 </article>
                 <article class="media">
-                    <figure class="media-left">
-                        <p class="image is-64x64">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
-                        </p>
-                    </figure>
+                    
                     <div class="media-content">
                         <div class="content">
                             <p>
@@ -189,11 +167,7 @@
                     </div>
                 </article>
                 <article class="media">
-                    <figure class="media-left">
-                        <p class="image is-64x64">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
-                        </p>
-                    </figure>
+                    
                     <div class="media-content">
                         <div class="content">
                             <p>
@@ -223,45 +197,7 @@
                     </div>
                 </article>
                 <article class="media">
-                    <figure class="media-left">
-                        <p class="image is-64x64">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
-                        </p>
-                    </figure>
-                    <div class="media-content">
-                        <div class="content">
-                            <p>
-                                <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
-                                <br>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu
-                                pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis
-                                feugiat facilisis.
-                            </p>
-                        </div>
-                        <nav class="level is-mobile">
-                            <div class="level-left">
-                                <a class="level-item">
-                                    <span class="icon is-small"><i class="fas fa-reply"></i></span>
-                                </a>
-                                <a class="level-item">
-                                    <span class="icon is-small"><i class="fas fa-retweet"></i></span>
-                                </a>
-                                <a class="level-item">
-                                    <span class="icon is-small"><i class="fas fa-heart"></i></span>
-                                </a>
-                            </div>
-                        </nav>
-                    </div>
-                    <div class="media-right">
-                        <button class="delete"></button>
-                    </div>
-                </article>
-                <article class="media">
-                    <figure class="media-left">
-                        <p class="image is-64x64">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
-                        </p>
-                    </figure>
+                    
                     <div class="media-content">
                         <div class="content">
                             <p>
